assignment_1/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/nam/Desktop/BKUdoc/BK_3rd_year/PrincipleProgrammingLanguage/ass1_submit/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'_'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "':='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'='", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NL", "WS", "SG_CMT", "MUL_CMT", 
                      "IF", "ELSE", "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "STRING", "INT", "FLOAT", "BOOLEAN", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "NIL", 
                      "TRUE", "FALSE", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "DBL_EQ", "NOT_EQ", "LT", "LE", "GT", "GE", "AND", 
                      "OR", "NOT", "AS_EQ", "ADD_EQ", "SUB_EQ", "MUL_EQ", 
                      "DIV_EQ", "MOD_EQ", "EQ", "DOT", "LCIB", "RCIB", "LCUB", 
                      "RCUB", "LSQB", "RSQB", "COMMA", "SECO", "COLON", 
                      "ID", "DEC", "BIN", "OCT", "HEX", "FLOAT_LIT", "STRING_LIT", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_int_lit = 0
    RULE_bool_lit = 1
    RULE_program = 2
    RULE_manydecl = 3
    RULE_stmt = 4
    RULE_stmt_block = 5
    RULE_decl = 6
    RULE_var_decl = 7
    RULE_var_decl_init = 8
    RULE_var_decl_uninit = 9
    RULE_const_decl = 10
    RULE_func_decl = 11
    RULE_star_dot_func_call = 12
    RULE_func_call_stmt = 13
    RULE_star_lhs_dot = 14
    RULE_func_call = 15
    RULE_list_arg = 16
    RULE_tail_arg = 17
    RULE_arg = 18
    RULE_arr_dim_decl = 19
    RULE_arr_type = 20
    RULE_arr_lit = 21
    RULE_list_ele_arr = 22
    RULE_tail_ele_arr = 23
    RULE_ele_arr = 24
    RULE_struct_decl = 25
    RULE_star_struct_ele_decl = 26
    RULE_attr_decl = 27
    RULE_struct_lit = 28
    RULE_list_ele_struct = 29
    RULE_tail_ele_struct = 30
    RULE_ele_struct = 31
    RULE_star_interface_method_decl = 32
    RULE_interface_decl = 33
    RULE_not_last_para = 34
    RULE_tail_para = 35
    RULE_para = 36
    RULE_last_para = 37
    RULE_list_para = 38
    RULE_method_interface = 39
    RULE_assign_stmt = 40
    RULE_assign_op = 41
    RULE_else_if = 42
    RULE_if_stmt = 43
    RULE_for_stmt = 44
    RULE_basic_for = 45
    RULE_init_for = 46
    RULE_init = 47
    RULE_condit = 48
    RULE_update = 49
    RULE_range_for = 50
    RULE_index = 51
    RULE_blank = 52
    RULE_value = 53
    RULE_array_id = 54
    RULE_break_stmt = 55
    RULE_continue_stmt = 56
    RULE_return_stmt = 57
    RULE_rela_op = 58
    RULE_expr1 = 59
    RULE_expr2 = 60
    RULE_expr3 = 61
    RULE_expr4 = 62
    RULE_expr5 = 63
    RULE_expr6 = 64
    RULE_expr7 = 65
    RULE_star_dot_dim = 66
    RULE_lhs = 67
    RULE_dim = 68
    RULE_operand = 69
    RULE_lit = 70
    RULE_primi = 71
    RULE_all_type = 72

    ruleNames =  [ "int_lit", "bool_lit", "program", "manydecl", "stmt", 
                   "stmt_block", "decl", "var_decl", "var_decl_init", "var_decl_uninit", 
                   "const_decl", "func_decl", "star_dot_func_call", "func_call_stmt", 
                   "star_lhs_dot", "func_call", "list_arg", "tail_arg", 
                   "arg", "arr_dim_decl", "arr_type", "arr_lit", "list_ele_arr", 
                   "tail_ele_arr", "ele_arr", "struct_decl", "star_struct_ele_decl", 
                   "attr_decl", "struct_lit", "list_ele_struct", "tail_ele_struct", 
                   "ele_struct", "star_interface_method_decl", "interface_decl", 
                   "not_last_para", "tail_para", "para", "last_para", "list_para", 
                   "method_interface", "assign_stmt", "assign_op", "else_if", 
                   "if_stmt", "for_stmt", "basic_for", "init_for", "init", 
                   "condit", "update", "range_for", "index", "blank", "value", 
                   "array_id", "break_stmt", "continue_stmt", "return_stmt", 
                   "rela_op", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "star_dot_dim", "lhs", "dim", "operand", 
                   "lit", "primi", "all_type" ]

    EOF = Token.EOF
    T__0=1
    NL=2
    WS=3
    SG_CMT=4
    MUL_CMT=5
    IF=6
    ELSE=7
    FOR=8
    RETURN=9
    FUNC=10
    TYPE=11
    STRUCT=12
    INTERFACE=13
    STRING=14
    INT=15
    FLOAT=16
    BOOLEAN=17
    CONST=18
    VAR=19
    CONTINUE=20
    BREAK=21
    RANGE=22
    NIL=23
    TRUE=24
    FALSE=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    DBL_EQ=31
    NOT_EQ=32
    LT=33
    LE=34
    GT=35
    GE=36
    AND=37
    OR=38
    NOT=39
    AS_EQ=40
    ADD_EQ=41
    SUB_EQ=42
    MUL_EQ=43
    DIV_EQ=44
    MOD_EQ=45
    EQ=46
    DOT=47
    LCIB=48
    RCIB=49
    LCUB=50
    RCUB=51
    LSQB=52
    RSQB=53
    COMMA=54
    SECO=55
    COLON=56
    ID=57
    DEC=58
    BIN=59
    OCT=60
    HEX=61
    FLOAT_LIT=62
    STRING_LIT=63
    ERROR_CHAR=64
    ILLEGAL_ESCAPE=65
    UNCLOSE_STRING=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Int_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEC(self):
            return self.getToken(MiniGoParser.DEC, 0)

        def BIN(self):
            return self.getToken(MiniGoParser.BIN, 0)

        def OCT(self):
            return self.getToken(MiniGoParser.OCT, 0)

        def HEX(self):
            return self.getToken(MiniGoParser.HEX, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_int_lit




    def int_lit(self):

        localctx = MiniGoParser.Int_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_int_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4323455642275676160) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_bool_lit




    def bool_lit(self):

        localctx = MiniGoParser.Bool_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bool_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==24 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecl(self):
            return self.getTypedRuleContext(MiniGoParser.ManydeclContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.manydecl()
            self.state = 151
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def manydecl(self):
            return self.getTypedRuleContext(MiniGoParser.ManydeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_manydecl




    def manydecl(self):

        localctx = MiniGoParser.ManydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_manydecl)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.decl()
                self.state = 154
                self.manydecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Assign_stmtContext,0)


        def func_call_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Func_call_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.For_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt




    def stmt(self):

        localctx = MiniGoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.assign_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.func_call_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 163
                self.if_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 164
                self.for_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.break_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 166
                self.continue_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 167
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MiniGoParser.StmtContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(MiniGoParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt_block




    def stmt_block(self):

        localctx = MiniGoParser.Stmt_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt_block)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.stmt()
                self.state = 171
                self.stmt_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declContext,0)


        def interface_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decl)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.func_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.struct_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 180
                self.interface_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_init(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_initContext,0)


        def var_decl_uninit(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_uninitContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.var_decl_init()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.var_decl_uninit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def EQ(self):
            return self.getToken(MiniGoParser.EQ, 0)

        def expr1(self):
            return self.getTypedRuleContext(MiniGoParser.Expr1Context,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def all_type(self):
            return self.getTypedRuleContext(MiniGoParser.All_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_init




    def var_decl_init(self):

        localctx = MiniGoParser.Var_decl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(MiniGoParser.VAR)
            self.state = 188
            self.match(MiniGoParser.ID)
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 16, 17, 52, 57]:
                self.state = 189
                self.all_type()
                pass
            elif token in [46]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 193
            self.match(MiniGoParser.EQ)
            self.state = 194
            self.expr1(0)
            self.state = 195
            self.match(MiniGoParser.SECO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_uninitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def all_type(self):
            return self.getTypedRuleContext(MiniGoParser.All_typeContext,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_uninit




    def var_decl_uninit(self):

        localctx = MiniGoParser.Var_decl_uninitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl_uninit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(MiniGoParser.VAR)
            self.state = 198
            self.match(MiniGoParser.ID)
            self.state = 199
            self.all_type()
            self.state = 200
            self.match(MiniGoParser.SECO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def EQ(self):
            return self.getToken(MiniGoParser.EQ, 0)

        def expr1(self):
            return self.getTypedRuleContext(MiniGoParser.Expr1Context,0)


        def SECO(self):
            return self.getToken(MiniGoParser.SECO, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl




    def const_decl(self):

        localctx = MiniGoParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(MiniGoParser.CONST)
            self.state = 203
            self.match(MiniGoParser.ID)
            self.state = 204
            self.match(MiniGoParser.EQ)
            self.state = 205
            self.expr1(0)
            self.state = 206
            self.match(MiniGoParser.SECO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MiniGoParser.FUNC, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def LCIB(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.LCIB)
            else:
                return self.getToken(MiniGoParser.LCIB, i)

        def RCIB(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.RCIB)
            else:
                return self.getToken(MiniGoParser.RCIB, i)
